hphp/test/slow/meth-caller-bad-cls.php.expectf

Fatal error: Class must be a Class or string type in %s/meth-caller-bad-cls.php on line 6
